# gis-sentinel

./: README.md
backend/: .env.example  .gitignore  Cargo.toml
backend/src/: config.rs  main.rs  schema.rs
backend/src/handlers/: generic.rs  mod.rs  sentinel_ws.rs  websockets.rs
backend/src/workers/: alert_workers.rs  mod.rs
docs/: tasks.md
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: sentinelSocket.svelte.ts  types.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/sentinel/: +page.svelte
